@@ -17,6 +17,8 @@ __docformat__ = 'reStructuredText'
 
 
 directives = {
+      'warnhinweis': 'admonition',  # or, more generally, 'anmerkung'?
+      'ermahnung': 'admonition',  # sic! kept for backwards compatibiltity
       'achtung': 'attention',
       'vorsicht': 'caution',
       'code': 'code',
@@ -27,8 +29,6 @@ directives = {
       'notiz': 'note',
       'tipp': 'tip',
       'warnung': 'warning',
-      'warnhinweis': 'admonition',
-      'ermahnung': 'admonition',  # sic! kept for backwards compatibiltity
       'kasten': 'sidebar',
       'seitenkasten': 'sidebar',  # kept for backwards compatibiltity
       'seitenleiste': 'sidebar',
